OCaml 4.09 maintenance branch
-----------------------------

### Build system:

- #9383: Don't assume that AWKPATH includes .
  (David Allsopp, report by Ian Zimmerman)

- #9938, #9939: Define __USE_MINGW_ANSI_STDIO=0 for the mingw-w64 ports to
  prevent their C99-compliant snprintf conflicting with ours.
  (David Allsopp, report by Michael Soegtrop, review by Xavier Leroy)

### Bug fixes:

- #9326, #10125: Gc.set incorrectly handles the three `custom_*` fields,
  causing a performance regression
  (report by Emilio Jesús Gallego Arias, analysis and fix by Stephen Dolan,
   code by Xavier Leroy, review by Hugo Heuzard and Gabriel Scherer)

- #10250, #10266: Dynamically allocate alternate signal stacks to
  accommodate changes in Glibc 2.34.
  (Xavier Leroy, reports by Tomasz Kłoczko and R.W.M. Jones, review by Anil
   Madhavapeddy, Stephen Dolan, and Florian Angeletti)

- #10698, #10726, #10891: Free the alternate signal stack when the main OCaml
  code or an OCaml thread stops.
  (Xavier Leroy, review by David Allsopp, Florian Angeletti and Damien Doligez)

OCaml 4.09.1 (16 Mars 2020):
----------------------------

- #8855, #8858: Links for tools not created when installing with
  --disable-installing-byecode-programs (e.g. ocamldep.opt installed, but
  ocamldep link not created)
  (David Allsopp, report by Thomas Leonard)

- #8947, #9134, #9302: fix/improve support for the BFD library
  (Sébastien Hinderer, review by Damien Doligez and David Allsopp)

- #8953, #8954: Fix error submessages in the toplevel: do not display
  dummy locations
  (Armaël Guéneau, review by Gabriel Scherer)

- #8965, #8979: Alpine build failure caused by check-parser-uptodate-or-warn.sh
  (Gabriel Scherer and David Allsopp, report by Anton Kochkov)

- #8985, #8986: fix generation of the primitives when the locale collation is
  incompatible with C.
  (David Allsopp, review by Nicolás Ojeda Bär, report by Sebastian Rasmussen)
